Last commit before review

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -70,7 +70,7 @@
     justify-content: center;
 }
 label { 
-    font-family: DM Sans;
+    font-family: "DM Sans", sans-serif;
     font-size: 18px;
     font-weight: 700;
     line-height: 23px;
@@ -106,6 +106,7 @@ label {
     width: 100%;
     margin: 0;
     border: 0;
+    border-radius: 5px 5px 5px 5px;
     background: none;
     text-align: inherit;
     font-size: inherit;
@@ -120,7 +121,7 @@ label {
     width: 8px;
     height: 8px;
     right: 20px;
-    top: 15px;
+    top: 20px;
     z-index: 10000;
     border: 2px solid  #901C1C;
     border-bottom: 2px solid  #fff;
@@ -144,22 +145,29 @@ label {
     margin: 0;
     border-radius: 0 0 5px 5px;
     overflow: hidden;
-
 }
 
 .dropdown-options li{
     position: relative;
     padding: 14px 20px 14px;
+    border-color: white;
+    border-top: 1px solid;
+    width: 65%;
+    left: 4%;
+    
 }
 
 .dropdown .dropdown-options li:hover{
-    background-color: #D3573C;
-    color: #000000;
+    /* background-color: #D3573C; */
+    border-color: white;
+    /* color: #000000; */
+    color: #D3573C;
 }
 
 /* activate the filter */
 .dropdown.activate .dropdown-options{
     display: block;
+    /* border-radius: 10px 10px 0 0 */
 }
  
 .dropdown.activate::before{
@@ -167,21 +175,10 @@ label {
     transform: rotate(-225deg) ;
 }
 
+.activate{
+     border-radius: 5px 5px 0 0;
+}
 
-
-
-/* .filter-condition > select{
-    font-size: 18px;
-    font-weight: bold;
-    color: #FFFFFF;
-    border: none;
-    padding: 20px 20px 20px;
-    position: relative;
-    margin-left: 25px;
-    width: 170px;
-    background: #911C1C;
-    border-radius: 5px;
-} */
 
 .select-container {
     display: flex;
@@ -196,7 +193,7 @@ label {
 
 .photographer_content {
     margin: 0 100px;
-    margin-top: 2rem;
+    margin-top: 1rem;
 
 }
 
@@ -227,11 +224,14 @@ label {
     justify-content: space-between;
     padding: 35px;
     margin: auto;
+    height: 90vh; /* Set the height to match the viewport height */
+    overflow-y: auto; /* Add vertical scroll if the content overflows */
 }
 
 .modal header {
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 2rem;
 }
 
 .modal header img {
@@ -241,7 +241,8 @@ label {
 .modal header h2 {
     font-size: 64px;
     font-weight: normal;
-    text-align: center;
+    /* margin-bottom: 2rem; */
+    /* text-align: center; */
 }
 
 form {
@@ -249,6 +250,11 @@ form {
     width: 100%;
     flex-direction: column;
     align-items: flex-start;
+    margin-top: 2rem;
+    /* height: 100vh;  */
+    /* Set the height to match the viewport height */
+    /* overflow-y: auto;  */
+    /* Add vertical scroll if the content overflows */
 }
 
 form label {
@@ -269,14 +275,26 @@ form input {
     height: 68px;
     border: none;
     border-radius: 5px;
+    margin-top: 1rem;
 }
+
+form textarea {
+    margin-top: 1rem;
+}
+
+textarea{
+    border-radius: 5px;
+}
+
+
 
 
 
 .picture_section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
+    grid-gap: 2rem;
+    margin-top: 2rem;
 }
 
 
@@ -324,7 +342,7 @@ form input {
 }
 
 video {
-    overflow-clip-margin: content-box;
+    /* overflow-clip-margin: content-box; */
     overflow: clip;
 }
 
