--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     background-color: white;
-    z-index: 10;
+    z-index: 11000;
     overflow: auto;
     animation: lightboxIn .5s;
     transition: opacity .3s;
@@ -18,7 +18,6 @@
     cursor: pointer;
     overflow: hidden;
     outline: none;
-    /*to check what outlineis doing */
 }
 
 .lightbox.fadeOut {
@@ -27,7 +26,7 @@
 
 .lightbox__close {
     position: fixed;
-    bottom: 1;
+    bottom: 80%;
     transition: .3s;
     right: 0;
     top: 10%;
@@ -52,8 +51,8 @@
 
 }
 
-.lightbox__next:hoover,
-.lightbox__precedent:hoover {
+.lightbox__next:hover,
+.lightbox__precedent:hover {
     opacity: 1;
 }
 
@@ -78,15 +77,13 @@
 
 .lightbox__container img {
     max-width: 100%;
-    width: 1050px;
-    height: 88%;
-    display: block;
+    max-height: 100%;
     object-fit: contain;
-    height: auto;
-    min-height: 100vh;
     border-radius: 1%;
-    box-shadow: 0 3px 10px rgb(0 0 0 / 0.3);
-    animation: lightboxIn .5s;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
+    animation: lightboxIn 0.5s;
+
+    
 }
 
 .lightbox__container span {
